# YanisCanera.github.io

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-single-platform.yml
docs/: Doxyfile
docs/html/: _c_make_ninja_8cpp.html  _c_make_ninja_8cpp.js  _c_make_ninja_8cpp__incl.dot  _c_make_ninja_8cpp_source.html  _c_make_ninja_8h.html  _c_make_ninja_8h__dep__incl.dot  _c_make_ninja_8h__incl.dot  _c_make_ninja_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: files_0.js  functions_0.js
include/: CMakeNinja.h
src/: CMakeNinja.cpp
